feat: add a no data screen on dashboard

--- a/BankingService.Api/ClientApp/src/app/dashboard/dashboard.component.css
+++ b/BankingService.Api/ClientApp/src/app/dashboard/dashboard.component.css
@@ -21,11 +21,17 @@
     margin-top: 10px;
     margin-left: 15px;
     font-size: large;
-    
+
     display: flex;
     align-items: center;
 }
 
 .icon {
     margin-right: 5px
+}
+
+.no-data {
+  font-family: Ubuntu;
+  font-size: larger;
+  margin: 20% 20%;
 }
