--- a/BankingService.Api/ClientApp/src/app/dashboard/my-line-chart/my-line-chart.component.html
+++ b/BankingService.Api/ClientApp/src/app/dashboard/my-line-chart/my-line-chart.component.html
@@ -1,13 +1,15 @@
-<ngx-charts-line-chart
-  [results]="inputData"
-  scheme="cool"
-  [xAxis]="true"
-  [yAxis]="true"
-  [showXAxisLabel]="true"
-  [showYAxisLabel]="true"
-  xAxisLabel="Date"
-  yAxisLabel="Treasury"
-  
-  >
-</ngx-charts-line-chart>
+<div class="chart-container">
+  <ngx-charts-line-chart
+    [results]="inputData"
+    scheme="cool"
+    [xAxis]="true"
+    [yAxis]="true"
+    [showXAxisLabel]="true"
+    [showYAxisLabel]="true"
+    xAxisLabel="Date"
+    yAxisLabel="Treasury"
+
+    >
+  </ngx-charts-line-chart>
+</div>
 <!-- [roundDomains]="true" -->
