--- a/BankingService.Api/ClientApp/src/app/dashboard/dashboard.component.css
+++ b/BankingService.Api/ClientApp/src/app/dashboard/dashboard.component.css
@@ -1,6 +1,8 @@
 .main-container {
     display: flex;
-    justify-content: center;
+    justify-content: left;
+    margin-left: 10%;
+    margin-right: 10%;
     margin-top: 20px;
 }
 
@@ -13,7 +15,8 @@
 }
 
 .dashboard-line-container {
-    display: flex;
+  display: flex;
+  justify-content: center;
 }
 
 .chart-title {
@@ -33,5 +36,5 @@
 .no-data {
   font-family: Ubuntu;
   font-size: larger;
-  margin: 20% 20%;
+  margin: 20% 30%;
 }
