--- a/BankingService.Api/ClientApp/src/app/dashboard/date-selector/date-selector.component.css
+++ b/BankingService.Api/ClientApp/src/app/dashboard/date-selector/date-selector.component.css
@@ -14,6 +14,7 @@ li {
   margin: 5px;
   padding: 10px;
   background-color: #1f1f1f;
+  border-radius: 2px;
 }
 
 .selected {
@@ -27,7 +28,7 @@ li {
 }
 
 .custom-selection {
-  margin-top: 20px;
+  margin: 20px 5px;
 }
 
 .date-picker, .textbox {
