feat: add a footer version

--- a/BankingService.Api/ClientApp/src/app/app.component.css
+++ b/BankingService.Api/ClientApp/src/app/app.component.css
@@ -1,9 +1,33 @@
+.main {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
 .header {
     background-color: #181818;
     padding: 15px;
 
     display: flex;
     align-items: center;
+}
+
+.content {
+  flex: 1;
+}
+
+.linebreak {
+  background-color: rgba(255, 255, 255, 0.050);
+  padding-bottom: 1px;
+  margin: 5px 35%;
+}
+
+.footer {
+  flex-shrink: 0;
+  text-align: center;
+  padding: 5px;
+  font-family: Ubuntu;
+  color: rgb(150, 150, 150);
 }
 
 .icon {
