--- a/BankingService.Api/ClientApp/src/app/app.component.html
+++ b/BankingService.Api/ClientApp/src/app/app.component.html
@@ -9,6 +9,8 @@
       Dashboard
     </a>
   </div>
-  <router-outlet />
+  <div class="content">
+    <router-outlet/>
+  </div>
+  <footer class="footer"><div class="linebreak"></div>Version {{ version }}</footer>
 </main>
-
