fix: fixed some HTTP status code

--- a/BankingService.Api/ClientApp/src/app/sncackbars/error-snackbar/error-snackbar.component.html
+++ b/BankingService.Api/ClientApp/src/app/sncackbars/error-snackbar/error-snackbar.component.html
@@ -1,5 +1,5 @@
 <div class="custom-snackbar">
-  <span matSnackBarLabel>{{ message }}</span>
+  <span matSnackBarLabel><b>Error: </b>{{ message }}</span>
   <span matSnackBarActions>
     <button class="snackbar-button" mat-button matSnackBarAction (click)="snackBarRef.dismissWithAction()">✔</button>
   </span>
