--- a/BankingService.Api/ClientApp/src/app/sncackbars/error-snackbar/error-snackbar.component.css
+++ b/BankingService.Api/ClientApp/src/app/sncackbars/error-snackbar/error-snackbar.component.css
@@ -1,11 +1,23 @@
 ::ng-deep .mdc-snackbar__surface {
-  background-color: rgb(128, 0, 0) !important;
+  background-color: transparent !important;
+  border: none !important;
+  box-shadow: none !important;
 }
 
 .custom-snackbar {
   font-family: Ubuntu;
   display: flex;
   justify-content: space-between;
+  border-radius: 3px;
+  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2), 0px 6px 10px 0px rgba(0, 0, 0, 0.14), 0px 1px 18px 0px rgba(0, 0, 0, 0.12);
+}
+
+.snackbar-color-red {
+  background-color: rgb(128, 0, 0);
+}
+
+.snackbar-color-orange {
+  background-color: rgb(180, 90, 0);
 }
 
 .snackbar-button {
