--- a/BankingService.Api/ClientApp/src/app/sncackbars/error-snackbar/error-snackbar.component.html
+++ b/BankingService.Api/ClientApp/src/app/sncackbars/error-snackbar/error-snackbar.component.html
@@ -1,4 +1,4 @@
-<div class="custom-snackbar">
+<div class="custom-snackbar" [ngClass]="{'snackbar-color-red': isInternalServerError, 'snackbar-color-orange' : isBusinessError}">
   <span matSnackBarLabel><b>Error: </b>{{ message }}</span>
   <span matSnackBarActions>
     <button class="snackbar-button" mat-button matSnackBarAction (click)="snackBarRef.dismissWithAction()">✔</button>
