--- a/BankingService.Api/ClientApp/src/app/transactions/transactions.component.html
+++ b/BankingService.Api/ClientApp/src/app/transactions/transactions.component.html
@@ -1,7 +1,7 @@
 <div class="card main-card">
   <app-import (uploadComplete)="refreshList()"></app-import>
   <app-filters (filterOutput)="onFiltersChanged($event)"></app-filters>
-  <app-transaction-headers></app-transaction-headers>
+  <!-- <app-transaction-headers></app-transaction-headers> -->
   <ul>
     <li *ngFor="let t of transactions | filterTransactions:filters">
       <app-transaction-item [transaction]="t"></app-transaction-item>
