--- a/BankingService.Api/ClientApp/src/app/dashboard/misc-data/misc-data.component.html
+++ b/BankingService.Api/ClientApp/src/app/dashboard/misc-data/misc-data.component.html
@@ -42,7 +42,7 @@
       <table>
         <tbody>
           <tr *ngFor="let t of report?.highestTransactions">
-            <td>{{ t.date | dateToString }}</td>
+            <td>{{ t.date | date:'YYYY-MM-dd' }}</td>
             <td>{{ t.flow | numberToMoney }}</td>
             <td>{{ t.type }}<br>{{ t.category }}</td>
             <td>{{ t.autoComment }}<br>{{ t.comment }}</td>
