--- a/BankingService.Api/ClientApp/src/app/transactions/filters/filters.component.html
+++ b/BankingService.Api/ClientApp/src/app/transactions/filters/filters.component.html
@@ -26,7 +26,7 @@
           (dateChange)="onEndDateSelected()"
         />
       </mat-date-range-input>
-      <mat-hint>DD/MM/YYYY – DD/MM/YYYY</mat-hint>
+      <mat-hint>YYYY-MM-DD – YYYY-MM-DD</mat-hint>
       <mat-datepicker-toggle
         matIconSuffix
         [for]="picker"
