--- a/BankingService.Api/ClientApp/src/app/transactions/transaction-item/transaction-item.component.css
+++ b/BankingService.Api/ClientApp/src/app/transactions/transaction-item/transaction-item.component.css
@@ -1,16 +1,31 @@
 .container {
   display: flex;
   align-items: center;
-  justify-content: space-between;
   font-family: Ubuntu, sans-serif;
 
   margin: 10px;
-  padding: 8px 16px 10px 16px;
+  padding: 8px;
 
   border-style: solid;
   border-color: rgb(40, 40, 40);
   border-width: 1px;
   border-radius: 10px;
+}
+
+.info-panel {
+  flex: 1;
+}
+
+img {
+  display: block;
+}
+
+.image-panel {
+  margin-right: 10px;
+  width: 65px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .container:hover {
@@ -25,7 +40,7 @@
 
 .title {
   font-size: 1.4em;
-  padding-left: 7px;
+  margin-right: 7px;
 }
 
 .editable-text-field {
