--- a/BankingService.Api/ClientApp/src/app/transactions/transaction-item/transaction-item.component.html
+++ b/BankingService.Api/ClientApp/src/app/transactions/transaction-item/transaction-item.component.html
@@ -1,10 +1,10 @@
 <div class="container">
+  <div class="image-panel tooltip">
+    <span class="tooltiptext">{{ transaction.type }}</span>
+    <img [src]="imgSrc" width="65" height="65" [alt]="transaction.type"/>
+  </div>
   <div class="info-panel">
     <div class="title-line">
-      <span>
-        <mat-icon fontIcon="edit" class="edit-icon" (click)="onEditTransactionClicked()" *ngIf="areEditableFieldsDisabled; else saveAction"/>
-        <ng-template #saveAction><mat-icon fontIcon="save" class="save-icon" (click)="onSaveTransactionClicked()"/></ng-template>
-      </span>
       <span class="title">
         <span *ngIf="areEditableFieldsDisabled; else commentInput">{{ transaction.autoComment }}{{ separator }}{{transaction.comment }}</span>
         <ng-template #commentInput>
@@ -17,24 +17,13 @@
           />
         </ng-template>
       </span>
+      <span>
+        <mat-icon fontIcon="edit" class="edit-icon" (click)="onEditTransactionClicked()" *ngIf="areEditableFieldsDisabled; else saveAction"/>
+        <ng-template #saveAction><mat-icon fontIcon="save" class="save-icon" (click)="onSaveTransactionClicked()"/></ng-template>
+      </span>
     </div>
     <div class="date-type-cat-line">
       <span>{{ transaction.date | date:'YYYY-MM-dd' }}</span>
-      {{ ' . ' }}
-      <span>
-        <span *ngIf="areEditableFieldsDisabled; else typesInput">
-          {{ transaction.type }}
-        </span>
-        <ng-template #typesInput>
-          <select class="editable-text-field" [(ngModel)]="this.transaction.type">
-            <option *ngFor="let t of types" [value]="t">{{ t }}</option>
-          </select>
-          <!-- <button class="dropdown-button" mat-button [matMenuTriggerFor]="menuType">{{ transaction.type }}</button>
-          <mat-menu #menuType="matMenu">
-            <button *ngFor="let t of types" mat-menu-item (click)="typesMenuItemClicked(t)">{{ t }}</button>
-          </mat-menu> -->
-        </ng-template>
-      </span>
       {{ ' . ' }}
       <span>
         <span *ngIf="areEditableFieldsDisabled; else categoryInput">
@@ -49,6 +38,18 @@
             <button *ngFor="let c of categories" mat-menu-item (click)="categoryMenuItemClicked(c)">{{ c }}</button>
           </mat-menu> -->
         </ng-template>
+      </span>
+      <span>
+        <span *ngIf="!areEditableFieldsDisabled">
+          {{ ' . ' }}
+          <select class="editable-text-field" [(ngModel)]="this.transaction.type">
+            <option *ngFor="let t of types" [value]="t">{{ t }}</option>
+          </select>
+          <!-- <button class="dropdown-button" mat-button [matMenuTriggerFor]="menuType">{{ transaction.type }}</button>
+          <mat-menu #menuType="matMenu">
+            <button *ngFor="let t of types" mat-menu-item (click)="typesMenuItemClicked(t)">{{ t }}</button>
+          </mat-menu> -->
+        </span>
       </span>
     </div>
     <div class="label-line tooltip">
