--- a/BankingService.Api/ClientApp/src/app/transactions/transactions.component.css
+++ b/BankingService.Api/ClientApp/src/app/transactions/transactions.component.css
@@ -3,6 +3,9 @@
     margin-left: 10%;
     margin-right: 10%;
     min-height: 50%;
+
+    display: flex;
+    flex-direction: column;
 }
 
 .inner-section {
@@ -17,3 +20,11 @@ ul {
     padding: 0;
     margin: 0;
   }
+
+.no-data {
+  margin-top: 10px;
+  margin-bottom: 20px;
+  font-size: 1.2em;
+  font-family: Ubuntu;
+  align-self: center;
+}
