--- a/BankingService.Api/ClientApp/src/app/transactions/filters/filters.component.html
+++ b/BankingService.Api/ClientApp/src/app/transactions/filters/filters.component.html
@@ -69,6 +69,10 @@
     </mat-menu>
   </div>
 
+  <div class="result-counter">
+    {{ resultCount }} results
+  </div>
+
   <div class="filter-clear">
     <button class="big-button clear-button" (click)="onClearFilter()">
       Clear Filters
