feat: added date navigation buttons on list screen

--- a/BankingService.Api/ClientApp/src/app/transactions/filters/filters.component.css
+++ b/BankingService.Api/ClientApp/src/app/transactions/filters/filters.component.css
@@ -55,6 +55,11 @@
     padding: 10px;
 }
 
+.time-management {
+  cursor: pointer;
+  padding: 1px;
+}
+
 ::ng-deep .mat-datepicker-toggle-default-icon {
     color: lightgray !important;
 }
