--- a/BankingService.Api/ClientApp/src/app/transactions/import/import.component.css
+++ b/BankingService.Api/ClientApp/src/app/transactions/import/import.component.css
@@ -6,6 +6,7 @@ input {
 
     display: flex;
     justify-content: right;
+    align-items: center;
 }
 
 .import-button {
@@ -13,4 +14,9 @@ input {
     margin: 15px;
     font-size: 16px;
     font-weight: 500;
+}
+
+.backup-icon {
+  padding: 5px;
+  cursor: pointer;
 }
