feat: added filtered sum on list screen

--- a/BankingService.Api/ClientApp/src/app/transactions/filters/filters.component.html
+++ b/BankingService.Api/ClientApp/src/app/transactions/filters/filters.component.html
@@ -53,7 +53,8 @@
   </div>
 
   <div class="result-counter">
-    {{ resultCount }} results
+    <div>{{ resultCount }} results</div>
+    <div><b>{{ filteredAmount | numberToMoney }}</b></div>
   </div>
 
   <div class="filter-clear">
